--- a/authentication-authorization-service/src/main/resources/application.properties
+++ b/authentication-authorization-service/src/main/resources/application.properties
@@ -1,2 +1,12 @@
-logging.file.name=C:/Users/siddharths/Desktop/Logger Folder/auth_service.log
-jwt.secret=mySecret
+
+#server.port=0
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+#secret key - should be encrypted
+jwt.secret=secretkey
+#3 minutes validity
+jwt.token.validity=180000
+#ignore null fields in json
+spring.jackson.default-property-inclusion=NON_NULL
