--- a/authentication-authorization-service/src/main/resources/application.yml
+++ b/authentication-authorization-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/AuthorizationDB
+    url: jdbc:mysql://localhost:3306/authorrize
     password: root
     username: root
     driver-class-name: com.mysql.cj.jdbc.Driver
