--- a/authentication-authorization-service/src/main/resources/application.properties
+++ b/authentication-authorization-service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 #secret key - should be encrypted
 jwt.secret=secretkey
-#3 minutes validity
-jwt.token.validity=180000
+
+jwt.token.validity=18000000
 #ignore null fields in json
 spring.jackson.default-property-inclusion=NON_NULL
